[gd_scene load_steps=11 format=3 uid="uid://bo1jforvfhnbv"]

[ext_resource type="Script" uid="uid://havf4lfwphw2" path="res://screens/start_menus/about_menu/about_menu.gd" id="1_0ear5"]
[ext_resource type="PackedScene" uid="uid://touq8b40dlj2" path="res://screens/start_menus/about_menu/background_presenter/background_presenter.tscn" id="2_3nk6m"]
[ext_resource type="PackedScene" uid="uid://b1qaewqhhtlyv" path="res://screens/start_menus/about_menu/submenu_selector/submenu_selector.tscn" id="3_aeiub"]
[ext_resource type="PackedScene" uid="uid://ohx2441ipvbn" path="res://screens/start_menus/about_menu/popup_presenter/popup_presenter.tscn" id="3_c5shs"]
[ext_resource type="Texture2D" uid="uid://dy5tlctbsbkcg" path="res://global_assets/go_back_button.png" id="4_crga3"]
[ext_resource type="Texture2D" uid="uid://xollcxmkscnt" path="res://global_assets/go_back_button_selected.png" id="5_c5shs"]
[ext_resource type="Texture2D" uid="uid://6dersyppynfl" path="res://global_assets/go_back_glow.png" id="7_7r87m"]
[ext_resource type="Script" uid="uid://cc5cx846obsu8" path="res://global_systems/scene_loading_system/sls_scenes_bank/sls_scenes_bank.gd" id="8_t5rgc"]

[sub_resource type="Animation" id="Animation_ex2wu"]
resource_name = "go_back_selected"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_efucx"]
_data = {
&"go_back_selected": SubResource("Animation_ex2wu")
}

[node name="AboutMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_0ear5")

[node name="BackgroundPresenter" parent="." instance=ExtResource("2_3nk6m")]
unique_name_in_owner = true

[node name="PopupPresenter" parent="." instance=ExtResource("3_c5shs")]
unique_name_in_owner = true

[node name="SubmenuSelector" parent="." instance=ExtResource("3_aeiub")]
unique_name_in_owner = true
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="GoBackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 937.0
offset_right = 185.0
offset_bottom = 1053.0
pivot_offset = Vector2(75.5556, 56.6666)
texture_normal = ExtResource("4_crga3")
texture_pressed = ExtResource("5_c5shs")
texture_hover = ExtResource("5_c5shs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GoBackButton"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_efucx")
}

[node name="PointLight2D" type="PointLight2D" parent="GoBackButton"]
visible = false
position = Vector2(76, 58)
energy = 0.0
texture = ExtResource("7_7r87m")

[node name="SLSBank" type="Node" parent="."]
script = ExtResource("8_t5rgc")
scenes_paths = Array[String](["uid://cflg2ypu25js2"])
metadata/_custom_type_script = "uid://cc5cx846obsu8"

[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
